force-app/main/default/objects/Placement_and_Elective__c.object
<CustomObject>
    <description>The Placement and Elective Request object stored course requests made  by the caretaker during the enrollment process.</description>
    <fields>
        <fullName>Course_Format__c</fullName>
        <label>Course Format</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Textbook</fullName>
                </value>
                <value>
                    <fullName>Workbook</fullName>
                </value>
                <value>
                    <fullName>Online</fullName>
                </value>
                <value>
                    <fullName>Co-op</fullName>
                </value>
                <value>
                    <fullName>In Person</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Course_Grade_Level__c</fullName>
        <label>Course Grade Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>K</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Course_Requested__c</fullName>
        <description>Select the elective choice your student is interested in taking</description>
        <label>Course Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Art</fullName>
                </value>
                <value>
                    <fullName>Educational Technology and Online Learning</fullName>
                </value>
                <value>
                    <fullName>Music</fullName>
                </value>
                <value>
                    <fullName>Spanish</fullName>
                </value>
                <value>
                    <fullName>Business Keyboarding</fullName>
                </value>
                <value>
                    <fullName>Chinese</fullName>
                </value>
                <value>
                    <fullName>Digital Arts</fullName>
                </value>
                <value>
                    <fullName>Sign Language</fullName>
                </value>
                <value>
                    <fullName>Webquest</fullName>
                </value>
                <value>
                    <fullName>Discovering Music I (3-5)</fullName>
                </value>
                <value>
                    <fullName>Discovering Music II (3-5)</fullName>
                </value>
                <value>
                    <fullName>Discovering Music III (3-5)</fullName>
                </value>
                <value>
                    <fullName>Experiencing Music I (K-2)</fullName>
                </value>
                <value>
                    <fullName>Experiencing Music II (K-2)</fullName>
                </value>
                <value>
                    <fullName>Experiencing Music III (K-2)</fullName>
                </value>
                <value>
                    <fullName>Exploring Music I (6-8)</fullName>
                </value>
                <value>
                    <fullName>Exploring Music II (6-8)</fullName>
                </value>
                <value>
                    <fullName>Exploring Music III (6-8)</fullName>
                </value>
                <value>
                    <fullName>No music course required</fullName>
                </value>
                <value>
                    <fullName>Art History A</fullName>
                </value>
                <value>
                    <fullName>Concepts of Engineering and Technology</fullName>
                </value>
                <value>
                    <fullName>Digital Photography I A</fullName>
                </value>
                <value>
                    <fullName>Emergent Computer Technology</fullName>
                </value>
                <value>
                    <fullName>French I A</fullName>
                </value>
                <value>
                    <fullName>French II A</fullName>
                </value>
                <value>
                    <fullName>French IV A</fullName>
                </value>
                <value>
                    <fullName>Game Design I A</fullName>
                </value>
                <value>
                    <fullName>German I A</fullName>
                </value>
                <value>
                    <fullName>German II A</fullName>
                </value>
                <value>
                    <fullName>Introduction to Graphic Design A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Course_Type__c</fullName>
        <label>Course Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Requested</fullName>
                </value>
                <value>
                    <fullName>Prior Academic History</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hours_Per_Week__c</fullName>
        <label>Hours Per Week</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Level_Requested__c</fullName>
        <description>English level</description>
        <label>Course Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Advanced</fullName>
                </value>
                <value>
                    <fullName>Advanced Placement</fullName>
                </value>
                <value>
                    <fullName>Honors</fullName>
                </value>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Dual Diploma</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pass_or_Fail__c</fullName>
        <label>Pass or Fail</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Passed</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Program_Enrollment__c</fullName>
        <description>The Program Enrollment Record of the student.</description>
        <label>Program Enrollment</label>
        <referenceTo>hed__Program_Enrollment__c</referenceTo>
        <relationshipName>Placement_and_Elective_Requests</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Question_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Question Group</label>
        <referenceTo>Enrollment_Component__c</referenceTo>
        <relationshipName>Placement_and_Elective_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Resources_Used__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Resources Used</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>School_Year_PA__c</fullName>
        <label>School_Year_PA</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>2013-2014</fullName>
                </value>
                <value>
                    <fullName>2014-2015</fullName>
                </value>
                <value>
                    <fullName>2015-2016</fullName>
                </value>
                <value>
                    <fullName>2016-2017</fullName>
                </value>
                <value>
                    <fullName>2017-2018</fullName>
                </value>
                <value>
                    <fullName>2018-2019</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>School_Year__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>School Year</label>
        <referenceTo>School_Year__c</referenceTo>
        <relationshipName>Placement_and_Elective_Requests_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Weeks_Per_Year__c</fullName>
        <label>Weeks Per Year</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Course History and Request</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Placement and Elective Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Course History and Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>